taskchampion/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskchampion
  namespace: taskchampion 
spec:
  selector:
    app: taskchampion
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
